# Anamorph

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  dependency-review.yml  msvc.yml  release.yml
docs/: DOCUMENTATION_COVERAGE.md  FUTURE_RISKS.md  HANDOVER.md  KNOWN_ISSUES.md  POSTMORTEMS.md  REPOSITORY_MAP.md  SOURCE_OF_TRUTH.md
docs/architecture/: API_REFERENCE.md  ARCHITECTURE.md  COMPATIBILITY_MATRIX.md  DSP_ALGORITHMS.md  DSP_GRAPH_REFERENCE.md  LATENCY_MODEL.md  PARAMETER_REFERENCE.md  PARAMETER_REGISTRY.md  PERFORMANCE_BUDGET.md  REALTIME_SAFETY_AUDIT.md  RELEASE_HARDENING_PLAN.md  SERIALIZATION_REGISTRY.md  SIGNAL_FLOW.md  STATE_SERIALIZATION.md  THREAD_MODEL.md
docs/architecture/design-decisions/: ADR-0001-format-agnostic-dsp-core.md  ADR-0002-parameter-id-versioning.md  ADR-0003-oversampling-strategy.md  ADR-0004-clickfree-transition-strategy.md  ADR-0005-phase-matched-dry-reconstruction.md  ADR-0006-strict-serial-signal-chain.md  ADR-0007-levelmatch-measure-predict.md  ADR-0008-custom-per-ab-undo.md  ADR-0009-nan-selfheal-nyquist-clamp.md  ADR-0010-host-hidden-internalstate.md  ADR-0011-linux-x11-cpu-render.md  ADR-0012-juce-8.0.14-upgrade.md  ADR-0013-raw-normalised-serialization-attribute.md  ADR-0014-multiband-bands-solo-automatable.md  ADR-0015-split-drag-zero-latency-follower.md  ADR-0021-build-hardening-strategy.md  ADR-0022-juce-9.0.0-upgrade-sha-pin.md  ADR_INDEX.md
docs/policies/: ADR_POLICY.md  AI_AGENT_POLICY.md  ARCHITECTURE_REVIEW_GATE.md  CHANGELOG_POLICY.md  CODE_STYLE.md  COMPATIBILITY_POLICY.md  DEPENDENCY_POLICY.md  DOCUMENTATION_LIFECYCLE_POLICY.md  DSP_POLICY.md  PARAMETER_COMPATIBILITY_POLICY.md  REALTIME_AUDIO_POLICY.md  RELEASE_POLICY.md  SESSION_COMPATIBILITY_POLICY.md  TESTING_POLICY.md  THREADING_POLICY.md
docs/procedures/: BUILD.md  CI_CD.md  DEVELOPMENT.md  PACKAGING.md  RELEASE_COMPATIBILITY_CHECKLIST.md  RELEASE_PROCESS.md  TESTING.md  TROUBLESHOOTING.md
docs/user/: INSTALLATION.md  USER_MANUAL.md
packaging/linux/: INSTALL.txt  install.sh  uninstall.sh
packaging/macos/: INSTALL.txt  build-pkg.sh
packaging/windows/: Anamorph.iss  INSTALL.txt
scripts/: build.sh  run-pluginval.ps1  run-pluginval.sh  run-tests.sh  setup-linux.sh
src/: AbSlotIndex.h  InternalState.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
src/dsp/: AnamorphEngine.cpp  AnamorphEngine.h  ChorusEngine.cpp  ChorusEngine.h  Correlation.h  EngineParameters.h  HaasProcessor.cpp  HaasProcessor.h  LR4Xover.h  LevelMeters.h  LoudnessMatch.cpp  LoudnessMatch.h  MidSide.h  MonoMaker.cpp  MonoMaker.h  MultibandWidth.cpp  MultibandWidth.h  Saturation.h  ScopeBuffer.h  SoloMonitor.cpp  SoloMonitor.h  VelvetNoise.cpp  VelvetNoise.h
src/gui/: CorrelationMeter.cpp  CorrelationMeter.h  FrameClock.h  LevelMeter.cpp  LevelMeter.h  LookAndFeel.cpp  LookAndFeel.h  SpectrumImager.cpp  SpectrumImager.h  Vectorscope.cpp  Vectorscope.h
tests/: dsp_tests.cpp  state_tests.cpp
tests/fixtures/: legacy_pre_0_6_4_ab_slots.xml  legacy_pre_0_8_4_view_params.xml  legacy_v0_2_bare_apvts.xml  parameter_registry.snapshot
worklogs/: BANDWIDTH_DRAG_FIX_v0.8.12.md  JUCE9_MIGRATION_v0.8.13.md  MOUSE_RELEASE_STATE_FIX_v0.8.12.md  POST_v0.8.12_AUDIT_AND_ROADMAP.md  PRODUCT_READINESS_ROADMAP_v0.8.13.md  STATE_HARNESS_v0.8.13.md
worklogs/performance/: FINAL_PASS_v0.8.11_INVESTIGATION.md  WAVE3_INVESTIGATION.md  WAVE4_INVESTIGATION.md  WAVE5_INVESTIGATION.md  WAVE6_GPU_RENDER_INVESTIGATION.md  XOVER_GLIDE_SPEED_v0.8.11_INVESTIGATION.md
worklogs/release-hardening/: RH_PR2_INVESTIGATION.md  RH_PR8_RELEASE_PIPELINE.md
